// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure: AWS Lambda→Functions, GCP Cloud Run→Container Apps, Spring Boot→Container Apps. WHEN: migrate Lambda to Functions, migrate AWS to Azure, Lambda assessment, migrate from GCP, Cloud Run to Container Apps, Cloud Run migration, migrate Spring Boot to Container Apps, Azure Spring Apps to ACA, Spring Boot ACA migration.",
  "extractedKeywords": [
    "apps",
    "assess",
    "assessment",
    "azure",
    "boot",
    "cloud",
    "container",
    "cross-cloud",
    "deploy",
    "from",
    "function",
    "functions",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "spring",
    "when",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "assessment",
  "azure",
  "boot",
  "cloud",
  "container",
  "cross-cloud",
  "deploy",
  "from",
  "function",
  "functions",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "spring",
  "when",
  "workloads",
]
`;
